Fix wrongly applied horizontal padding around slide image on mobile

--- a/_sass/config/_lazy.scss
+++ b/_sass/config/_lazy.scss
@@ -1,6 +1,5 @@
 picture {
   width: 100%; /* stretch to fit its containing element */
-  overflow: hidden;
 }
 
 picture img {
